# fhir-docs-mcp

./: .gitattributes  CLAUDE.md  LICENSE  README.md  pyproject.toml
definitions/definitions.json/: profiles-resources.json
src/fhir_mcp/: parser.py  server.py
