[project]
name = "fhir-docs-mcp"
version = "0.1.0"
description = "MCP server for exploring FHIR R4 StructureDefinitions"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
fhir-mcp = "fhir_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fhir_mcp"]
